syntax = "proto3";

package donation;

option go_package = "github.com/dharmasatrya/goodkarma/donation-service/proto";

service DonationService {
    rpc CreateDonation (CreateDonationRequest) returns (CreateDonationResponse);
    rpc UpdateDonationStatus (UpdateDonationStatusRequest) returns (UpdateDonationStatusResponse);
    rpc GetDonationsByUserId (GetDonationsByUserIdRequest) returns (GetDonationsByUserIdResponse);
    rpc GetDonationsByEventId (GetDonationsByEventIdRequest) returns (GetDonationsByEventIdResponse);
}

//ambil user id dari token

message Donation {
    string id = 1;
    string user_id = 2;
    string event_id = 3;
    uint32 amount = 4;
    string status = 5;
    string donation_type = 6;
}

message CreateDonationRequest {
    string event_id = 1;
    uint32 amount = 2;
    string status = 3;
    string donation_type = 4;
}

message CreateDonationResponse {
    string id = 1;
    string user_id = 2;
    string event_id = 3;
    uint32 amount = 4;
    string status = 5;
    string donation_type = 6;
}

message UpdateDonationStatusRequest {
    string id = 1;
    string status = 2;
}

message UpdateDonationStatusResponse {
    string id = 1;
    string user_id = 2;
    string event_id = 3;
    uint32 amount = 4;
    string status = 5;
    string donation_type = 6;
}

message GetDonationsByUserIdRequest {
    string user_id = 1;
}

message GetDonationsByUserIdResponse {
    repeated Donation donations = 1;
}

message GetDonationsByEventIdRequest {
    string event_id = 1;
}

message GetDonationsByEventIdResponse {
    repeated Donation donations = 1;
}